# endoscopy_tool

./: .gitignore  Base.db  CHANGELOG  CHANGELOG.md  LICENSE  README.md  README.ru.md  build.ps1  main.spec  pubspec.yaml  requirements.txt  videos.db  voiceCommands.py
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  technical-issue.yml  user-story.md
.github/workflows/: ci.yml  macos-build.yml  windows-build.yml
Integration_Tests/: conftest.py  test_detection.py  test_examination.py  test_screenshots.py
Unit Tests/: Process_Command.py
android/app/: build.gradle.kts
docs/: Contributing.md  quality_assurance.md
docs/architecture/: architecture.md
docs/automation/: continuous-delivery.md  continuous-integration.md
docs/quality-assurance/: quality-attribute-scenarios.md  user-acceptance-tests.md
docs/reports/: ai-usage.md  (+1 more)
lib/: macos_camera_recorder.dart  main.dart
linux/: CMakeLists.txt
test/: examination_test.dart  video_page_logic_test.dart  widget_test.dart
videoQueries/: Base.db  database.py  main.py  pyproject.toml  requirements.txt  videos.db  voiceCommand.py
videoQueries/models/: Detection.py  Examination.py  Screenshot.py  patient.py  recording.py  video.py
videoQueries/routers/: Detection.py  Examination.py  Screenshots.py  Set_path.py  frames_sender.py  freeze_detector.py  patient.py  recording.py  video.py
videoQueries/schemas/: Detection.py  examination.py  patient.py  screenshots.py  video.py
videoQueries/utils/: freeze_detector.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+52 files in other folders)
